Alignment of text in info popups #3155 - issue fixed

--- a/study-builder/fdahpStudyDesigner/src/main/webapp/css/style.css
+++ b/study-builder/fdahpStudyDesigner/src/main/webapp/css/style.css
@@ -2700,3 +2700,9 @@ td span.eye-inc:hover {
     vertical-align: middle;
 }
     
+    
+.tooltip > .tooltip-inner {
+text-align: left !important;
+align-items: left !important;
+width:100%
+}
